[WIP] Cursor added login functionality
